homeworks/vadym-khvoinytskyi/lesson-10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - course-app.local
    secretName: course-app-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
